Updated main.js to fix a defect on mobile navigation
Fixed a defect on the contact validator function in main.js which effected mobile nav

--- a/css/main.css
+++ b/css/main.css
@@ -1856,7 +1856,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .single-page-content figure {
- padding: 20px;
+ padding: 20px 5px;
 
 }
 
